--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     },
     "dependencies": {
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "lucide-react": "^0.365.0",
         "next": "14.1.4",
         "react": "^18",
         "react-dom": "^18",
